<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:windowSoftInputMode="adjustResize"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_gravity="center|top"
        android:padding="10dp"
        android:text="@string/string"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:text="@string/string1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/string2"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="15dp"
            android:id="@+id/login_layout"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:background="@drawable/bg_edittext_1"
                android:hint="@string/string4"
                android:padding="15dp" />


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:hint="@string/string5"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn"
                android:padding="12dp"
                android:text="Войти"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/string7"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="28dp"
                    android:text="@string/string8"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>
</FrameLayout>